Atualizacao do arquivo 14/05/2025: Atualizacao do arquivo CSS/HTML com criacao dos linksnos cards da home

--- a/aulas/style.css
+++ b/aulas/style.css
@@ -90,6 +90,10 @@ h2 {
         flex-shrink: 1;
         /* permite reduzir o tamanho */
     }
+    a{
+        text-decoration: none; /* Tirar sublinhado */
+        color: #000;
+    }
 }
 
 .card {
