--- a/site-limeira/style.css
+++ b/site-limeira/style.css
@@ -165,6 +165,11 @@ main {
         margin-bottom: 15px;    /* Marge inferior */
     }
 }
+.foto-municipio{
+    float: left;
+    width: 500px;
+    margin: 5px 10px 5px 10px;
+}
 
 .grid-turismo{
     display: flex;      /* opçao por layout em grid (grades). O padrao para o display é block */
