--- a/aulas/style.css
+++ b/aulas/style.css
@@ -322,3 +322,37 @@ th{
 .tabela3 td:nth-child(4){       
     text-align: center;
 }
+
+/* Abaixo a Formataçao da galeria de imagens */
+
+.galeria-destaque{
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    margin: 30px 0px 10px 0px;
+    
+    img{
+        width: 60%;
+    }
+}
+
+.galeria-miniatura{
+    display: flex;
+    justify-content: space-between;
+
+    img{
+        width: 110px;
+    }
+}
+
+.videos{
+    text-align: center;
+    video{
+        width: 70%;
+    }
+    iframe{
+        width: 70%;
+        height: 480px;
+        /* height: 60vh; */
+    }
+}
