--- a/site-limeira/style.css
+++ b/site-limeira/style.css
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -12,39 +12,46 @@ header {
     padding: 0px;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
     color: #102ea1;
 }
-a:hover{
+
+a:hover {
     text-decoration: underline;
 }
+
 section {
     margin-bottom: 40px;
 }
 
-h2{
+h2 {
     text-align: center;
     margin-top: 50px;
 }
+
 .destaque {
     text-align: center;
-    p{
+
+    p {
         color: #70330185;
         font-size: 1.2rem;
         line-height: 150%;
     }
+
     h1 {
         font-size: 2rem;
         margin-bottom: 15px;
-        font-weight: 600;   /* carga com valores de 100 a 900  se a fonte permitir */
+        font-weight: 600;
+        /* carga com valores de 100 a 900  se a fonte permitir */
         /* font-style: italic; */
     }
 }
+
 footer {
     background-color: #f1f1f1;
     padding: 30px;
@@ -60,22 +67,24 @@ main {
     padding: 30px 0px 30px 0px;
 }
 
-.grid-home{
+.grid-home {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+
     * {
         flex-basis: 300px;
         flex-grow: 1;
         flex-shrink: 1;
     }
-    a{
+
+    a {
         text-decoration: none;
         color: #a34201;
     }
 }
 
-.card{
+.card {
     /* 0: descolocamento horizontal, 3px: deslocamento vertical, 10px: desfoque, rgba: cor da sombra */
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     /* Aplicar sombra */
@@ -84,7 +93,8 @@ main {
     border-radius: 20px;
     /*faz o arredondamento das bordas */
     text-align: center;
-    img{
+
+    img {
         width: 100%;
         /* fixa a largura proporcional */
         object-fit: cover;
@@ -92,15 +102,18 @@ main {
         height: 200px;
         /* altura original da imagem */
     }
-    h3{
+
+    h3 {
         color: #382200;
         margin: 15px 0 5px 0;
     }
-    p{
+
+    p {
         font-size: 1rem;
         padding: 0px 10px;
     }
 }
+
 .card:hover {
     transform: translateY(-8px);
 }
@@ -110,6 +123,7 @@ main {
     justify-content: center;
     gap: 10px;
     margin-top: 10px;
+
     a {
         background-color: #aaa;
         padding: 10px;
@@ -117,81 +131,85 @@ main {
         color: white;
         border-radius: 10px;
     }
+
     a:hover {
         transform: translateY(-2px);
     }
+
     a:nth-child(1) {
-        background-color: #3b5998;  /* SHIFT+ALT+SETA para copiar linhas */
+        background-color: #3b5998;
+        /* SHIFT+ALT+SETA para copiar linhas */
     }
+
     a:nth-child(2) {
         background-color: #ff0000;
     }
+
     a:nth-child(3) {
         background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
     }
+
     a:nth-child(4) {
         background-color: #25d366;
     }
+
     a:nth-child(5) {
         background-color: #000;
     }
 }
-.voltar{ 
+
+.voltar {
     text-align: center;
     margin-top: 20px;
     font-size: 1.5rem;
 }
 
 .grid-municipio{
-    display: flex;      /* opçao por layout em grid (grades). O padrao para o display é block */
-    justify-content: space-between;     /* Faz o alinhamento pelas margens externas (direita e esquerda) */
+    display: flex;
+    justify-content: space-between;
     gap: 1.5rem;
     align-items: flex-start;
-    div{
-        flex-grow: 1;   /* Permite expandir a largura */
-        flex-shrink: 1; /* Permite reduzir a largura */
-        flex-basis: 300px;  /*Tamanho inicial */
-    }
-    img{
-        width: 100%;    /* imagem responsiva */
-    }
-    h2{
-        text-align: start; /* alinha a esquerda */
-        margin-bottom: 15px;
+    div {
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 300px;
+    h2 {
+        text-align: start;
+        margin-bottom: 10px;
         margin-top: 0px;
     }
-    p{
-        line-height: 150%; /* Altura da linha/margem */
-        margin-bottom: 15px;    /* Marge inferior */
+    p {
+        line-height: 150%;
+        margin-bottom: 15px;
     }
 }
-.foto-municipio{
+.foto-municipio {
     float: left;
     width: 500px;
-    margin: 5px 10px 5px 10px;
+    margin-bottom: 20px;
+    margin-right: 20px;
 }
 
-.grid-turismo{
-    display: flex;      /* opçao por layout em grid (grades). O padrao para o display é block */
-    justify-content: space-between;     /* Faz o alinhamento pelas margens externas (direita e esquerda) */
+.grid-turismo {
+    display: flex;
+    justify-content: space-between;
     gap: 1.5rem;
     align-items: flex-start;
-    div{
-        flex-grow: 1;   /* Permite expandir a largura */
-        flex-shrink: 1; /* Permite reduzir a largura */
-        flex-basis: 200px;  /*Tamanho inicial */
+    div {
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 200px;
     }
-    img{
-        width: 100%;    /* imagem responsiva */
+    img {
+        width: 100%;
     }
-    h2{
-        text-align:center;
+    h2 {
+        text-align: center;
         margin-bottom: 15px;
         margin-top: 5px;
     }
-    p{
-        line-height: 150%; /* Altura da linha/margem */
-        margin-bottom: 15px;    /* Marge inferior */
+    p {
+        line-height: 150%;
+        margin-bottom: 15px;
     }
 }
-
