--- a/site-limeira/style.css
+++ b/site-limeira/style.css
@@ -173,6 +173,7 @@ main {
         flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 300px;
+    }
     h2 {
         text-align: start;
         margin-bottom: 10px;
@@ -189,6 +190,13 @@ main {
     margin-bottom: 20px;
     margin-right: 20px;
 }
+.foto-catedral{
+   float: right;
+   width: 500px;
+   margin-bottom: 20px;
+   margin-left: 20px; 
+}
+
 
 .grid-turismo {
     display: flex;
@@ -200,16 +208,73 @@ main {
         flex-shrink: 1;
         flex-basis: 200px;
     }
-    img {
+    /* img {
         width: 100%;
-    }
+    } */
     h2 {
         text-align: center;
         margin-bottom: 15px;
-        margin-top: 5px;
+        margin-top: 10px;
     }
     p {
         line-height: 150%;
         margin-bottom: 15px;
     }
+}
+.turismo-destaque{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px 10px 0px;
+    background-color: #000;
+    
+    img{
+        width: 80%;
+    }
+}
+
+.turismo-miniatura{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0px 10px 0px;
+
+    img{
+        width: 15%;
+    }
+}
+
+.grid-comercio{
+    display: block;
+    justify-content:center;
+    gap: 2rem;
+    align-items:flex-start;
+    div {
+        flex-grow: 1;
+        flex-shrink: 1;
+        /* flex-basis: 800px; */
+    }
+    h2 {
+        text-align:center;
+        margin-bottom: 30px;
+        margin-top: 20px;
+    }
+    p {
+        line-height: 150%;
+        margin-bottom: 20px;
+    }
+    img{
+        width: 32%;
+    }
+    ul, ol{
+        padding-left: 20px;
+        list-style: square;
+        li{
+            line-height: 175%;
+        }
+    }
+}
+
+.grid-localizacao{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
 }
