--- a/site-limeira/style.css
+++ b/site-limeira/style.css
@@ -14,6 +14,10 @@ header {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffebe2;
+    /* background-image: url("imagens/cidade.png");
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 
 a {
@@ -38,7 +42,7 @@ h2 {
     text-align: center;
 
     p {
-        color: #70330185;
+        color: #33170085;
         font-size: 1.2rem;
         line-height: 150%;
     }
@@ -80,7 +84,7 @@ main {
 
     a {
         text-decoration: none;
-        color: #a34201;
+        color: #4d1f00;
     }
 }
 
