--- a/site-limeira/style.css
+++ b/site-limeira/style.css
@@ -12,6 +12,11 @@ header {
     padding: 0px;
 }
 
+.banner{
+    width: 100%;
+    height: 400px;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffebe2;
@@ -281,4 +286,17 @@ main {
     display: flex;
     justify-content: center;
     margin: 20px;
+    iframe{
+        width: 80%;
+        height: 600px;
+}
+
+.grid-pontos{
+    display: flex;
+    justify-content: center;
+    margin: 20px 10 30px 10px;
+    div {
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
 }
