--- a/aulas/style.css
+++ b/aulas/style.css
@@ -381,3 +381,57 @@ th{
         color: #0e365f;
     }
 }
+
+.grid-contato{
+    display: flex;
+    justify-content: space-between;
+
+    div{                    /* formataçao para todas as divs de contato */
+        flex-basis: 45%;
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
+    div:last-child{         /* a tag LAST-CHILD formata apenas a ultima div da lista */
+        iframe{
+            width: 100%;
+            height: 60vh;
+        }
+    }
+    label{
+        display: block;
+        /* background-color: #405de6; */
+        text-transform: uppercase;      /* transforma o texto todo em letras maiusculas */
+        font-weight: bold;
+        font-size: 0.9rem;
+        margin-top: 20px;
+        color:#0e365f;
+    }
+    input[type=text], input[type=email], textarea{
+        padding: 10px;
+        width: 90%;
+        border: 1px solid #bbb;
+        border-radius: 5px;             /* arredonda as bordas da caixa de digitaçao */
+    }
+    select{
+        padding: 8px;
+        border: 1px solid #bbb;
+        border-radius: 5px;
+    }
+    input[type=checkbox]{
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+    input[type=submit]{
+        border-style: none;
+        background-color: #3b5998;
+        color: #fff;
+        padding: 10px 30px;
+        border-radius: 5px;
+        cursor: pointer;            /* muda o desenho do cursor sobre o botao */
+    }
+    input[type=submit]:hover{   /* troca a cor de fundo ao passar o mouse */
+        background-color: #00060a;
+
+    }
+
+}
